--- a/templates/litmus-simple.html.mustache
+++ b/templates/litmus-simple.html.mustache
@@ -166,11 +166,23 @@
                                         <tr>
                                             <td align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 30px;" class="padding">Your action plan</td>
                                         </tr>
+                                    </table>
+                                </td>
+                            </tr>
+<tr>
+                                <td align="center">
+                                    <!-- BULLETPROOF BUTTON -->
+                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                         <tr>
-                                                <td bgcolor="#e8e8e8" border="1px solid #333" style="padding-top: 30px;" align="left" style="background-color: #f8f8f8; border: 1px solid #ccc; padding: 15px 20px; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding"><div>
-                                                  <p class="quote">{{{postExcerptHtml}}}</p>
-                                                  <a href="{{postUrl}}">{{postTitle}}</a>
-                                                </div>
+                                            <td align="center" style="padding-top: 25px;" class="padding">
+                                                <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
+                                                    <tr>
+                                                        <td align="left" style="border-radius: 3px;" bgcolor="#f8f8f8"><div style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #666; text-decoration: none; color: #666; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #ccc; display: inline-block; white-space: pre-wrap;" class="mobile-button">{{{postExcerptHtml}}}
+                                                        <a style="display: block;" href="{{postUrl}}">{{postTitle}}</a>
+                                                        </div>
+                                                    </td>
+                                                    </tr>
+                                                </table>
                                             </td>
                                         </tr>
                                     </table>
