Done with revisions, fixed bug with CTA link

--- a/templates/litmus-simple.html.mustache
+++ b/templates/litmus-simple.html.mustache
@@ -105,13 +105,13 @@
 
 <!-- HIDDEN PREHEADER TEXT -->
 <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-    Hey @{{name}}!  We hope you're enjoying working together through the ups and downs of launching innovation in your school community! We wanted to reach out and ask how things were going with the action plan you created.
+    Hello, {{name}}!  We hope that in the months since the end of Launching Innovation in Schools you have enjoyed using the tools, frameworks, and ideas from the course to lead change in your school or organization. We are reaching out to you to check in with your progress toward the action plan you developed in the course, as well as to understand how the course influenced your change initiative goals.
 </div>
 
 <!-- HEADER -->
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <tr>
-        <td bgcolor="#e8e8e8" align="center">
+        <td bgcolor="#ffffff" align="center">
             <!--[if (gte mso 9)|(IE)]>
             <table align="center" border="0" cellspacing="0" cellpadding="0" width="500">
             <tr>
@@ -121,7 +121,7 @@
                 <tr>
                     <td align="center" valign="top" style="padding: 15px 0;" class="logo">
                         <a href="http://litmus.com" target="_blank">
-                            <img alt="Logo" src="https://d20zirxti5eytb.cloudfront.net/wp-content/uploads/2016/11/forumsbannerreal1930068317.png" width="500" height="60" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
+                            <img alt="Logo" src="https://d20zirxti5eytb.cloudfront.net/wp-content/uploads/2017/05/image1473634653.png" width="800" height="170" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
                         </a>
                     </td>
                 </tr>
@@ -134,7 +134,7 @@
         </td>
     </tr>
     <tr>
-        <td bgcolor="#D8F1FF" align="center" style="padding: 30px 15px 30px 15px;" class="section-padding">
+        <td bgcolor="#ffffff" align="center" style="padding: 30px 15px 30px 15px;" class="section-padding">
             <!--[if (gte mso 9)|(IE)]>
             <table align="center" border="0" cellspacing="0" cellpadding="0" width="500">
             <tr>
@@ -150,26 +150,21 @@
                                     <!-- COPY -->
                                     <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                         <tr>
-                                            <td align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 30px;" class="padding">Hey <a href="{{membersUrl}}{{name}}">@{{name}}</a>!</td>
+                                            <td align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 30px;" class="padding">Hello, {{name}}!</td>
                                         </tr>
                                         <tr>
                                             <td align="center" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding">
-                                            We hope you're enjoying working together through the ups and downs of launching innovation in your school community!  We wanted to reach out and ask how things were going with the action plan you created.
+                                            We hope that in the months since the end of Launching Innovation in Schools you have enjoyed using the tools, frameworks, and ideas from the course to lead change in your school or organization. We are reaching out to you to check in with your progress toward the action plan you developed in the course, as well as to understand how the course influenced your change initiative goals.
                                         </tr>
-                                    </table>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <!-- COPY -->
-                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                         <tr>
-                                            <td align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 30px;" class="padding">Your action plan</td>
+                                            <td align="center" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding">
+                                            Please fill out the survey below to let us know how the course has influenced your practice! Your input will be invaluable for further development of this course and other future projects!
                                         </tr>
                                     </table>
                                 </td>
                             </tr>
-<tr>
+                           
+                            <tr>
                                 <td align="center">
                                     <!-- BULLETPROOF BUTTON -->
                                     <table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -177,7 +172,35 @@
                                             <td align="center" style="padding-top: 25px;" class="padding">
                                                 <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
                                                     <tr>
-                                                        <td align="left" style="border-radius: 3px;" bgcolor="#f8f8f8"><div style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #666; text-decoration: none; color: #666; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #ccc; display: inline-block; white-space: pre-wrap;" class="mobile-button">{{{postExcerptHtml}}}
+                                                        <td align="center" style="border-radius: 3px;" bgcolor="#529b9c"><a href="http://mit.co1.qualtrics.com/jfe/form/SV_eCFItl9N3lB7LcV" target="_blank" style="font-size: 24px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #529b9c; display: inline-block;" class="mobile-button">Tell us about your experience &rarr;</a></td>
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                            {{#shouldShowPost}}
+                            <tr>
+                                <td>
+                                    <!-- COPY -->
+                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                        <tr>
+                                            <td align="center" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding">
+                                            In this email, we’ve also included your forum submission of your Initial Action Plan, Part 2: Concrete Steps. We encourage you to look at your initial design for change and reflect on what steps you’ve taken, what you’ve learned, and where you might go in the future.
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="center">
+                                    <!-- BULLETPROOF BUTTON -->
+                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                        <tr>
+                                            <td align="center" style="padding-top: 25px;" class="padding">
+                                                <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
+                                                    <tr>
+                                                        <td align="left" style="border-radius: 10px;" bgcolor="#DAEAEA"><div style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #666; text-decoration: none; color: #666; text-decoration: none; border-radius: 10px; padding: 15px 25px; display: inline-block; white-space: pre-wrap;" class="mobile-button">{{{postExcerptHtml}}}
                                                         <a style="display: block;" href="{{postUrl}}">{{postTitle}}</a>
                                                         </div>
                                                     </td>
@@ -188,36 +211,7 @@
                                     </table>
                                 </td>
                             </tr>
-                            <tr>
-                                <td>
-                                    <!-- COPY -->
-                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                                        <tr>
-                                            <td align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 30px;" class="padding">Share your challenges and successes</td>
-                                        </tr>
-                                        <tr>
-                                            <td align="center" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding">
-                                            We hope it's fun to see this, and would love to hear about challenges, any ways you could use help, and feedback you have on the course.
-                                        </tr>
-                                    </table>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td align="center">
-                                    <!-- BULLETPROOF BUTTON -->
-                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                                        <tr>
-                                            <td align="center" style="padding-top: 25px;" class="padding">
-                                                <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
-                                                    <tr>
-                                                        <td align="center" style="border-radius: 3px;" bgcolor="#256F9C"><a href="{{ctaUrl}}" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #256F9C; display: inline-block;" class="mobile-button">Share your story &rarr;</a></td>
-                                                    </tr>
-                                                </table>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </td>
-                            </tr>
+                            {{/shouldShowPost}}
                         </table>
                     </td>
                 </tr>
