Bold the action plan

--- a/templates/litmus-simple.html.mustache
+++ b/templates/litmus-simple.html.mustache
@@ -187,7 +187,7 @@
                                     <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                         <tr>
                                             <td align="center" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding">
-                                            In this email, we’ve also included your forum submission of your Initial Action Plan, Part 2: Concrete Steps. We encourage you to look at your initial design for change and reflect on what steps you’ve taken, what you’ve learned, and where you might go in the future.
+                                            In this email, we’ve also included your forum submission of your <b>Initial Action Plan, Part 2: Concrete Steps</b>. We encourage you to look at your initial design for change and reflect on what steps you’ve taken, what you’ve learned, and where you might go in the future.
                                         </tr>
                                     </table>
                                 </td>
