--- a/templates/litmus-simple.html.mustache
+++ b/templates/litmus-simple.html.mustache
@@ -119,7 +119,7 @@
             <![endif]-->
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 500px;" class="wrapper">
                 <tr>
-                    <td align="center" valign="top" style="padding: 15px 0;" class="logo">
+                    <td align="center" valign="top" height="170" style="padding: 15px 0;" class="logo">
                         <a href="http://litmus.com" target="_blank">
                             <img alt="Logo" src="https://d20zirxti5eytb.cloudfront.net/wp-content/uploads/2017/05/image1473634653.png" width="800" height="170" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
                         </a>
@@ -154,11 +154,11 @@
                                         </tr>
                                         <tr>
                                             <td align="center" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding">
-                                            We hope that in the months since the end of Launching Innovation in Schools you have enjoyed using the tools, frameworks, and ideas from the course to lead change in your school or organization. We are reaching out to you to check in with your progress toward the action plan you developed in the course, as well as to understand how the course influenced your change initiative goals.
+                                            We hope that in the months since the end of <a href="https://www.edx.org/course/launching-innovation-schools-mitx-microsoft-education-11-154x">Launching Innovation in Schools</a> you have enjoyed using the tools, frameworks, and ideas from the course to lead change in your school or organization. We are reaching out to you to check in regarding your progress on the action plan you developed in the course, as well as to understand how the course influenced your change initiative goals.
                                         </tr>
                                         <tr>
                                             <td align="center" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding">
-                                            Please fill out the survey below to let us know how the course has influenced your practice! Your input will be invaluable for further development of this course and other future projects!
+                                            Please fill out the survey below to let us know how the course has influenced your practice! Your input will be invaluable for further development of this course and other future projects.
                                         </tr>
                                     </table>
                                 </td>
@@ -200,8 +200,10 @@
                                             <td align="center" style="padding-top: 25px;" class="padding">
                                                 <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
                                                     <tr>
-                                                        <td align="left" style="border-radius: 10px;" bgcolor="#DAEAEA"><div style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #666; text-decoration: none; color: #666; text-decoration: none; border-radius: 10px; padding: 15px 25px; display: inline-block; white-space: pre-wrap;" class="mobile-button">{{{postExcerptHtml}}}
-                                                        <a style="display: block;" href="{{postUrl}}">{{postTitle}}</a>
+                                                        <td align="left" style="border-radius: 10px;" bgcolor="#DAEAEA">
+                                                        <div style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #666; text-decoration: none; color: #666; text-decoration: none; border-radius: 10px; padding: 15px 25px; display: inline-block; white-space: pre-wrap;" class="mobile-button">
+                                                        <div><b>{{postTitle}}</b></div>
+                                                        <div>{{{postExcerptHtml}}}</div>
                                                         </div>
                                                     </td>
                                                     </tr>
